# Vertigo

./: CMakeLists.txt  README.md
include/Vertigo/: App.h  Core.h  Impact.h  Vertigo.h
include/Vertigo/Impact/: Manifold.h  Material.h  Math.h  Rigidbody.h  Scene.h  Shape.h
include/Vertigo/Impact/Math/: Vec2.h
sandbox/: CMakeLists.txt  sandbox.cpp
src/: App.cpp  CMakeLists.txt  Core.cpp  Logger.cpp  Logger.h
src/Impact/: CMakeLists.txt  Manifold.cpp  Manifold.h  Material.cpp  Rigidbody.cpp  Scene.cpp  Scene.h  Shape.cpp  Shape.h
src/Impact/Math/: Vec2.cpp  Vec2.h
tests/: CMakeLists.txt  circles.cpp  polycircle.cpp  polypoly.cpp
